--- a/Backend/Recipe/appsettings.json
+++ b/Backend/Recipe/appsettings.json
@@ -17,7 +17,7 @@
   },
   "eureka": {
     "client": {
-      "serviceUrl": "http://eureka.c:8761/eureka/",
+      "serviceUrl": "http://eureka:8761/eureka/",
       "shouldFetchRegistry": true,
       "shouldRegisterWithEureka": true,
       "validateCertificates": false    
