Search, menu bar, some user backend

--- a/Backend/User/appsettings.json
+++ b/Backend/User/appsettings.json
@@ -5,5 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "userDb1": "Server=userdb;database=UserDB;User ID= SA;password=abc123!!@;"
+  },
+  "spring": {
+    "application": {
+      "name": "UserApi"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://eureka.c:8761/eureka/",
+      "shouldFetchRegistry": true,
+      "shouldRegisterWithEureka": true,
+      "validateCertificates": false    
+    },
+    "instance": {
+      
+    }
+  },
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "key for foodie blah blah",
+    "Issuer": "Capstone",
+    "Audience": "Foodie"
+  }
 }
