--- a/FrontEnd/foodie/pubspec.yaml
+++ b/FrontEnd/foodie/pubspec.yaml
@@ -31,6 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  requests: ^4.7.0
+  http: ^0.13.5
+  appinio_swiper: ^1.1.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
