Login/Signup basic UI

--- a/Backend/User/appsettings.json
+++ b/Backend/User/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "userDb1": "Server=userdb;database=UserDB;User ID= SA;password=abc123!!@;"
+    "userDb1": "Server=userdb.c;database=UserDB;User ID= SA;password=abc123!!@;"
   },
   "spring": {
     "application": {
@@ -15,7 +15,7 @@
   },
   "eureka": {
     "client": {
-      "serviceUrl": "http://eureka.c:8761/eureka/",
+      "serviceUrl": "http://eureka:8761/eureka/",
       "shouldFetchRegistry": true,
       "shouldRegisterWithEureka": true,
       "validateCertificates": false    
