--- a/Backend/UserRecipes/appsettings.json
+++ b/Backend/UserRecipes/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "RecipeDatabase": {
+  "UserRecipesDatabase": {
     "ConnectionString": "mongodb+srv://MuteCoot:bgO0h2zvGhhsr7PH@foodie.oszd0t8.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "Foodie",
     "RecipeCollectionName": "UserRecipes"
