--- a/FrontEnd/foodie/pubspec.yaml
+++ b/FrontEnd/foodie/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_secure_storage: ^6.0.0
   animations: ^2.0.7
+  permission_handler: ^10.2.0
+  image_picker: ^0.8.6
+  uuid: ^3.0.6
 
 
 
